--- a/Develop/style.css
+++ b/Develop/style.css
@@ -10,7 +10,8 @@ body {
   resize: none;
   color: #000000;
   border-left: 1px solid black;
-  padding: 10px;
+  border-top: 1px solid white;
+  padding: 10px 10px 0px 10px;
 }
 
 .jumbotron {
@@ -59,6 +60,7 @@ body {
 
 .saveBtn {
   border-left: 1px solid black;
+  border-top: 1px solid white;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
@@ -69,3 +71,5 @@ body {
   font-size: 20px;
   transition: all .3s ease-in-out;
 }
+
+
